<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">
            <TextView
                android:id="@+id/textEmailReg"
                android:layout_width="match_parent"
                android:fontFamily="@font/pacifico"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="25sp" />


            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="357dp"

                android:layout_height="240dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="50dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animationchat" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:autofillHints=""
                android:background="@drawable/background_edit_text"
                android:drawableStart="@drawable/ic_mail_outline"
                android:drawablePadding="30dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="#A9A8BC"
                android:textCursorDrawable="@color/white"
                android:textSize="18sp" />



            <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="25dp"
                android:autofillHints=""
                android:background="@drawable/background_edit_text"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="30dp"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textColorHint="#A9A8BC"
                android:textCursorDrawable="@color/white"
                android:textSize="18sp"
                />

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:paddingBottom="2dp"
                android:text="Login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout1">


                <TextView android:id="@+id/link_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/register"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_centerHorizontal="true"/>


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>